--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "react-vertical-timeline-component": "^3.5.3",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
